<resources>
    <string name="app_name">ATM Consultoria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">atendimento@atmconsultoria.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_principal">Principal</string>
    <string name="menu_servicos">Serviços</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_contato">Contato</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_subtitulo">Entre em contato</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_principal_titulo1">Sistemade gestão de qualidade</string>
    <string name="text_principal_1">   O Sistema de Gestão de Qualidade (SGQ) é um conjunto estruturado de práticas, procedimentos e políticas que orientam uma organização a alcançar padrões mais elevados de desempenho. Ele busca garantir que cada processo seja executado de forma consistente, padronizada e alinhada às necessidades do cliente e aos objetivos estratégicos da empresa.\n   Além de organizar o funcionamento interno, o SGQ promove a cultura da melhoria contínua. Isso significa analisar processos, identificar oportunidades de otimização e implementar mudanças que reduzam falhas, desperdícios e retrabalhos. Com um sistema bem estruturado, a empresa aumenta sua eficiência, fortalece a confiança dos clientes e melhora a qualidade de seus produtos ou serviços.\n   Também faz parte do SGQ a criação de documentações, controles e monitoramentos que permitem rastrear atividades e tomar decisões baseadas em dados. Assim, o negócio se torna mais preparado para auditorias internas, certificações e exigências do mercado.</string>
    <string name="text_principal_titulo2">Indicadores de desempenho</string>
    <string name="text_principal_2">   Os indicadores de desempenho, também conhecidos como KPIs, são ferramentas fundamentais para medir o progresso e a eficiência de processos, equipes e metas organizacionais. Eles permitem transformar dados em informação útil, ajudando gestores a identificar pontos fortes, fragilidades e tendências ao longo do tempo.\n   Com indicadores bem definidos, a empresa consegue acompanhar resultados de forma clara e objetiva. Isso facilita a tomada de decisões estratégicas, já que os dados mostram onde é necessário intervir, onde ajustar recursos e quais áreas estão apresentando bons resultados. Dessa forma, os KPIs atuam como um guia para orientar ações e priorizar melhorias.\n   Além disso, indicadores de desempenho aumentam a transparência e a comunicação interna. Ao compartilhar resultados com a equipe, promove-se o alinhamento de expectativas, engajamento e foco nas metas. Com isso, todos trabalham de forma mais direcionada, contribuindo para o crescimento e evolução contínua da organização.</string>

    <string name="text_clientes_tituloPrincipal">Clientes</string>
    <string name="text_clienetes_textoPrincipal">   Nossos serviços apoiam organizações que buscam excelência operacional, melhoria contínua e gestão estratégica de resultados. Ao longo de nossa trajetória, colaboramos com empresas de diferentes setores, sempre oferecendo soluções personalizadas e orientadas por dados. Conheça alguns dos clientes que confiam em nosso trabalho.</string>

    <string name="text_clientes_Cielo">Cielo</string>
    <string name="text_clientes_Braskem">Braskem</string>
    <string name="text_clientes_Gerdau">Gerdau</string>
    <string name="text_clientes_Embraer">Embraer</string>
    <string name="text_clientes_Natura">Natura</string>
    <string name="text_clientes_LojasAmericanas">Lojas Americanas</string>
</resources>
